<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity"
    android:paddingBottom="12dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="20dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#171425"/>
    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/detail_avatar"
        android:layout_marginStart="8dp"
        tools:text="@string/full_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintBottom_toTopOf="@id/detail_location"
        app:layout_constraintStart_toEndOf="@+id/detail_avatar"
        android:layout_marginStart="8dp"
        tools:text="@string/company"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/detail_avatar"
        app:layout_constraintStart_toEndOf="@id/detail_avatar"
        android:layout_marginStart="8dp"
        tools:text="@string/location"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/detail_repo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/repositories"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_repo_num"
        app:layout_constraintEnd_toStartOf="@id/detail_followers_text"/>
    <TextView
        android:id="@+id/detail_repo_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/zero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_avatar"
        app:layout_constraintEnd_toStartOf="@id/detail_followers_text"/>
    <TextView
        android:id="@+id/detail_followers_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toEndOf="@id/detail_repo_text"
        app:layout_constraintTop_toBottomOf="@id/detail_followers_num"
        app:layout_constraintEnd_toStartOf="@id/detail_following_text"/>
    <TextView
        android:id="@+id/detail_followers_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        tools:text="@string/zero"
        app:layout_constraintTop_toBottomOf="@id/detail_avatar"
        app:layout_constraintStart_toEndOf="@id/detail_repo_text"
        app:layout_constraintEnd_toStartOf="@+id/detail_following_text"/>
    <TextView
        android:id="@+id/detail_following_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/following"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintStart_toEndOf="@id/detail_followers_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_followers_num"/>
    <TextView
        android:id="@+id/detail_following_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/detail_followers_text"
        app:layout_constraintTop_toBottomOf="@id/detail_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/zero"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/detail_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/detail_repo_text"
        app:tabIndicatorHeight="2dp"
        app:tabTextColor="@color/custom_color"/>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_tab"
        tools:layout_editor_absoluteX="16dp">
    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>