<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    style="@style/Theme.MaterialComponents.Light">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:civ_border_color="@color/custom_color"
            app:civ_border_width="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/item_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/item_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username"/>
        <TextView
            android:id="@+id/item_repository"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toRightOf="@+id/item_avatar"
            app:layout_constraintTop_toBottomOf="@+id/item_username"
            tools:text="@string/zero" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/repositories"
            android:textColor="@color/custom_color"
            app:layout_constraintLeft_toRightOf="@+id/item_repository"
            app:layout_constraintTop_toBottomOf="@+id/item_username" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>